--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ small{opacity:.75}
 <footer><small>Démo éducative (HarmoS 7–11). Le personnage reste en-monde et bienveillant.</small></footer>
 
 <script>
-const API_URL = "https://<ton-projet>.vercel.app/api/chat"; // ← remplace par ton domaine Vercel
+const API_URL = "https://dark-rice-25ee.nicolas-tuor.workers.dev/api/chat";
 const chat = document.getElementById("chat");
 const input = document.getElementById("input");
 const personaSel = document.getElementById("persona");
