--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Débat – Belles-Terres (démo)</title>
+<title>Forum — Belles-Terres (démo bot)</title>
 <style>
-body{font:16px/1.4 system-ui,Segoe UI,Arial;margin:0;background:#0b0b0c;color:#f3f3f3}
+body{font:16px/1.5 system-ui,Segoe UI,Arial;margin:0;background:#0b0b0c;color:#f3f3f3}
 header,footer{padding:12px 16px;background:#121214}
-main{max-width:820px;margin:0 auto;padding:12px 16px}
+main{max-width:860px;margin:0 auto;padding:12px 16px}
 .card{background:#18181b;border:1px solid #2a2a2e;border-radius:12px;padding:12px 14px;margin:10px 0}
 .row{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
-label{opacity:.85}
+label{opacity:.9}
 select,textarea,input,button{border-radius:10px;border:1px solid #2a2a2e;background:#101014;color:#f3f3f3}
 textarea{width:100%;min-height:70px;padding:10px}
 input,select{padding:8px}
@@ -19,27 +19,30 @@ button{padding:10px 14px;cursor:pointer}
 .user{border-left:4px solid #4ea1ff;padding-left:10px}
 .bot{border-left:4px solid #7ee787;padding-left:10px}
 small{opacity:.75}
+.tools{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
 </style>
 </head>
 <body>
 <header><h1>Forum des Belles-Terres — Démo bot en personnage</h1></header>
+
 <main>
   <div class="card">
     <div class="row">
-      <label>Persona&nbsp;</label>
-      <select id="persona">
-        <option value="elyo">Élyo — apprenti technicien éolien</option>
-        <option value="nae">Naé — apprentie chamane</option>
-        <option value="mika">Mika — employé·e Creuser-Puiser</option>
-        <option value="lia">Lia — Liberté & Nature</option>
-        <option value="teo">Téo — pêche & chevaux tradition</option>
-      </select>
+      <label>Persona</label>
+      <select id="persona"></select>
+
       <label>&nbsp;&nbsp;Voix</label>
       <input type="checkbox" id="tts" />
-      <small>Lire les réponses à voix haute</small>
+      <small>Lire la réponse à voix haute</small>
+
+      <label>&nbsp;&nbsp;Modèle</label>
+      <select id="model">
+        <option value="gpt-4o-mini" selected>gpt-4o-mini (recommandé)</option>
+        <option value="gpt-4o">gpt-4o (plénière exigeante)</option>
+      </select>
     </div>
     <div style="margin-top:8px">
-      <label>Contexte du monde (éditable, partagé au bot)</label>
+      <label>Contexte du monde (éditable)</label>
       <textarea id="world"></textarea>
     </div>
   </div>
@@ -47,92 +50,19 @@ small{opacity:.75}
   <div id="chat"></div>
 
   <div class="card">
-    <textarea id="input" placeholder="Écris ta réponse ou ton idée…"></textarea>
-    <div class="row" style="justify-content:space-between;margin-top:6px">
+    <textarea id="input" placeholder="Écris ton idée… (le bot relance avec 1–2 questions max)"></textarea>
+    <div class="tools" style="justify-content:space-between;margin-top:6px">
       <div>
         <button id="send">Envoyer</button>
-        <button id="reset">Réinitialiser</button>
+        <button id="save">Sauvegarder la session</button>
       </div>
-      <small>Astuce : le bot suit un format stable (👍 ℹ️ ❓ ✍️) et pose max 1–2 questions.</small>
+      <small>Format bot : 👍 ℹ️ ❓ ✍️ — reste en personnage et bienveillant.</small>
     </div>
   </div>
 </main>
-<footer><small>Démo éducative (HarmoS 7–11). Le personnage reste en-monde et bienveillant.</small></footer>
 
-<script>
-const API_URL = "https://dark-rice-25ee.nicolas-tuor.workers.dev/api/chat";
-const chat = document.getElementById("chat");
-const input = document.getElementById("input");
-const personaSel = document.getElementById("persona");
-const worldEl = document.getElementById("world");
-const tts = document.getElementById("tts");
+<footer><small>Démo éducative (HarmoS 7–11). IA encadrée, prompts enregistrés par session.</small></footer>
 
-const PERSONAS = {
-  elyo: { name:"Élyo", bio:"apprenti technicien des éoliennes, curieux et calme (pro-éolien, attentif aux oiseaux et au paysage)" },
-  nae:  { name:"Naé",  bio:"apprentie chamane des Belles-Terres (protège les terres sacrées, ouverte aux éoliennes en zones neutres)" },
-  mika: { name:"Mika", bio:"employé·e local·e de Creuser-Puiser (emplois, mines et éoliennes locales, veut des garanties environnementales)" },
-  lia:  { name:"Lia",  bio:"militante de l’association Liberté & Nature (préserver les biotopes, pro-écotourisme, contre mines et éoliennes)" },
-  teo:  { name:"Téo",  bio:"habitant attaché à la pêche artisanale et aux chevaux (prudent avec tourisme de masse et éoliennes)" },
-};
-
-const DEFAULT_WORLD = {
-  lieu: "Forum de parole de la Côte-Nord (vents forts)",
-  enjeux: ["mines de terres rares (néodyme)", "parcs éoliens côtiers", "écotourisme"],
-  rappel: "Rester respectueux, écouter, poser des questions courtes.",
-  note: "Les élèves écrivent une 'Ma trace' en 1 phrase à la fin de chaque tour."
-};
-worldEl.value = JSON.stringify(DEFAULT_WORLD, null, 2);
-
-let history = [
-  // Tu peux insérer un message d’ouverture ici si tu veux.
-];
-
-function addMsg(role, text) {
-  const div = document.createElement("div");
-  div.className = "card msg " + (role === "user" ? "user" : "bot");
-  div.textContent = text;
-  chat.appendChild(div);
-  chat.scrollTop = chat.scrollHeight;
-  if (role === "assistant" && tts.checked && "speechSynthesis" in window) {
-    const u = new SpeechSynthesisUtterance(text.replace(/👍|ℹ️|❓|✍️/g,""));
-    u.lang = "fr-CH"; window.speechSynthesis.speak(u);
-  }
-  // log minimal
-  localStorage.setItem("bt_demo_history", JSON.stringify(history));
-}
-
-document.getElementById("send").onclick = async () => {
-  const content = input.value.trim();
-  if (!content) return;
-  history.push({ role:"user", content });
-  addMsg("user", content);
-  input.value = "";
-
-  const persona = PERSONAS[personaSel.value];
-  const world = JSON.parse(worldEl.value || "{}");
-
-  const r = await fetch(API_URL, {
-    method: "POST",
-    headers: {"Content-Type":"application/json"},
-    body: JSON.stringify({ messages: history, persona, world })
-  });
-  const data = await r.json();
-  const reply = data.reply || "(pas de réponse)";
-  history.push({ role:"assistant", content: reply });
-  addMsg("assistant", reply);
-};
-
-document.getElementById("reset").onclick = () => {
-  history = [];
-  chat.innerHTML = "";
-  localStorage.removeItem("bt_demo_history");
-};
-
-// Restaurer l'historique précédent si présent
-try {
-  const prev = JSON.parse(localStorage.getItem("bt_demo_history")||"[]");
-  if (prev.length){ history = prev; for (const m of prev) addMsg(m.role==="user"?"user":"assistant", m.content); }
-} catch {}
-</script>
+<script type="module" src="./assets/app.js"></script>
 </body>
 </html>
