--- a/index.html
+++ b/index.html
@@ -63,6 +63,6 @@ small{opacity:.75}
 
 <footer><small>Démo éducative (HarmoS 7–11). IA encadrée, prompts enregistrés par session.</small></footer>
 
-<script type="module" src="./assets/app.js"></script>
+<script type="module" src="./assets/app.js?v=2"></script>
 </body>
 </html>
