--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     button { padding:10px 12px; border-radius:10px; border:1px solid #6665; background:#fff0; cursor:pointer; }
     button:hover { background:#6661; }
     .muted { opacity:.7; font-size:12px; }
+    select, option { background-color: Canvas; color: CanvasText; }
   </style>
 </head>
 <body>
@@ -89,5 +90,14 @@
 
   <!-- Scripts (ES modules) -->
   <script type="module" src="./assets/app.js?v=3"></script>
+  <div id="boot" style="position:fixed;inset:0;display:none;place-items:center;background:color-mix(in srgb, Canvas, CanvasText 5%);z-index:9999">
+  <div style="width:min(480px,90vw);padding:16px;border:1px solid #ccc4;border-radius:12px;background:Canvas;color:CanvasText;box-shadow:0 10px 30px #0003;">
+    <div id="boot-msg" style="margin-bottom:10px">Préparation…</div>
+    <div id="boot-bar" style="height:8px;background:#0001;border-radius:8px;overflow:hidden">
+      <div style="height:100%;width:var(--p,0%);background:#0b5bf5"></div>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
