--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
     .tab { display:none; }
     .tab.active { display:block; }
     .hint { margin-top:6px; }
+    /* Avatar persona en haut-droite de la fenêtre de chat */
+.chat-panel { position: relative; }
+.persona-avatar {
+  position:absolute; top:10px; right:12px;
+  width:56px; height:56px; border-radius:50%;
+  object-fit:cover; border:1px solid #ccc6; box-shadow:0 2px 8px #0002;
+}
+
   </style>
 </head>
 <body>
