--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 
   <main>
     <!-- Zone Chat (haut) -->
-    <section class="panel">
+<section class="panel chat-panel">
+  <img id="avatar" class="persona-avatar" alt="avatar" src="">
       <div class="row" style="gap:12px; margin-bottom:8px;">
         <label>Persona:
           <select id="persona"></select>
