--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </head>
 <body>
   <header>
-    <h1>⚡ Belles-Terres — bot de relance (maquette)</h1>
+    <h1> Belles-Terres — bot de relance (maquette)</h1>
     <span class="muted">Démo plénum/groupes — éditeurs en bas (Monde / Personas / Prompt)</span>
   </header>
 
