--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <body>
   <header>
     <h1> Belles-Terres — bot de relance (maquette)</h1>
-    <span class="muted">Démo plénum/groupes — éditeurs en bas (Monde / Personas / Prompt)</span>
+    <span class="muted">Démo bot de discusion — éditeurs en bas (Monde / Personas / Prompt)</span>
   </header>
 
   <main>
